# bullet-from-a-gun

./: .gitignore  1.json  README.md  notes.md  pyproject.toml  session_store.db  stats.json
conf/base/: README.md  catalog.yml  parameters.yml  parameters_data_preparation.yml  parameters_detectron2.yml  parameters_detr.yml  parameters_evaluation.yml  parameters_fine_tuning.yml  parameters_mask_rcnn.yml  parameters_rcnn.yml  parameters_retinanet.yml  parameters_ssd.yml  parameters_yolo.yml
data/06_models/eval/: detectron2_rccn_101_conf1_v1.json  detectron2_rccn_101_conf2_v1.json  detectron2_rccn_101_conf3_v1.json  detectron2_rccn_101_conf4_v1.json  detectron2_rccn_101_conf5_v1.json  detectron2_rccn_101_conf6_v1.json
data/06_models/output/detectron2_rccn_101_conf1_v1/: coco_instances_results.json  detectron2_rccn_101_conf1_v1_model_final.pth  events.out.tfevents.1722770470.u22.43012.0  events.out.tfevents.1722788339.ip-172-31-2-99.sa-east-1.compute.internal.10170.0  instances_predictions.pth  metrics.json  model_final.pth
data/06_models/output/detectron2_rccn_101_conf2_v1/: coco_instances_results.json  events.out.tfevents.1722788642.ip-172-31-2-99.sa-east-1.compute.internal.13511.0  metrics.json
data/06_models/output/detectron2_rccn_101_conf3_v1/: coco_instances_results.json  events.out.tfevents.1722788967.ip-172-31-2-99.sa-east-1.compute.internal.16916.0  metrics.json
data/06_models/output/detectron2_rccn_101_conf4_v1/: coco_instances_results.json  events.out.tfevents.1722792046.ip-172-31-2-99.sa-east-1.compute.internal.11574.0  events.out.tfevents.1722792132.ip-172-31-2-99.sa-east-1.compute.internal.12569.0  metrics.json  (+4 more)
data/06_models/tuned/: detectron2_rccn_101_conf1_v1.json  detectron2_rccn_101_conf2_v1.json  detectron2_rccn_101_conf3_v1.json  detectron2_rccn_101_conf4_v1.json  detectron2_rccn_101_conf5_v1.json  detectron2_rccn_101_conf6_v1.json
data/08_reporting/: detectron2_rccn_101_test_v1.csv  detectron2_rccn_101_train_v1.csv  detectron2_rccn_101_valid_v1.csv
docs/source/: conf.py  index.rst
notebooks/: debug.md  playground.ipynb  results.ipynb  ssd.ipynb  yolov5l_custom.ipynb
runs/detect/circle_yolov8n/: args.yaml  events.out.tfevents.1715970652.u22.935551.0  results.csv
runs/detect/circle_yolov9n/: args.yaml  events.out.tfevents.1715634653.u22.98313.0
src/: requirements.txt  target_builder.py
src/bullet_from_a_gun/: __init__.py  __main__.py  pipeline_registry.py
tests/pipelines/data_preparation/: test_pipeline.py
tests/pipelines/detectron2/: test_pipeline.py
tests/pipelines/detr/: test_pipeline.py
tests/pipelines/evaluation/: test_pipeline.py
tests/pipelines/fine_tuning/: test_pipeline.py
tests/pipelines/mask_rcnn/: test_pipeline.py
tests/pipelines/retinanet/: test_pipeline.py
tests/pipelines/ssd/: test_pipeline.py
tests/pipelines/yolo/: test_pipeline.py
(+341 files in other folders)
