[tool.poetry]
name = "bullet-from-a-gun"
version = "0.1.0"
description = ""
authors = ["dsthiago <thiagosd.2.18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kedro = "^0.19.3"
kedro-viz = "^8.0.1"
kedro-datasets = "^2.1.0"
numpy = "^1.26.4"
scipy = "^1.13.0"
pandas = "^2.2.1"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
ipykernel = "^6.29.4"
jupyter-contrib-nbextensions = "^0.7.0"
scikit-learn = "^1.4.1.post1"
scikit-image = "^0.22.0"
fastparquet = "^2024.2.0"
torch = ">=2.0.0, !=2.0.1, !=2.1.0" # https://stackoverflow.com/a/76647180


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
